# prism_default_depth_stencil_view_patch

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: plugin.cpp
